force-app/main/default/objects/Task_Dependency__c/Task_Dependency__c.object-meta.xml
<CustomObject>
    <description>Houses dependencies between actual tasks.  Based on the templates, template steps, and template step dependencies.</description>
    <label>Task Dependency</label>
    <nameField>
        <label>Task Dependency Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task Dependencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>