force-app/main/default/objects/Task_Dependency__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Task Dependencies</relationshipLabel>
    <relationshipName>Task_Dependencies</relationshipName>
    <type>Lookup</type>
</CustomField>