force-app/main/default/objects/Task_Dependency__c/fields/Task_Template_Step__c.field-meta.xml
<CustomField>
    <fullName>Task_Template_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task Template Step</label>
    <referenceTo>Task_Template_Step_Dependency__c</referenceTo>
    <relationshipLabel>Task Dependencies</relationshipLabel>
    <relationshipName>Task_Dependencies</relationshipName>
    <type>Lookup</type>
</CustomField>